# proyecto-simulaciones-inyeccion-co2

./: .gitignore  CLAUDE.md  README.md  data  pyproject.toml  pytest.ini  requirements.txt
.githooks/: pre-push
configs/: default.yaml
configs/campaigns/: fno_vs_unet_vs_attn.yaml
configs/experiments/: baseline.yaml  fno_axial_attn.yaml  unet_film.yaml
docker/: .dockerignore  Dockerfile  run.sh
docs/: arquitectura-y-correcciones-spec-000.md  experiments.md  informe-resultados-campana-fno-vs-unet-vs-attn.md  mantener-main-limpio.md  servidor.md
legacy/: README.md
legacy/cmg2tensor/: .gitignore  README.md  data_listing.txt  pytest.ini  run_transform.ps1
legacy/codigo-entrenamiento/: train_dataset.py
notebooks/: Histogramas.ipynb  checklist.ipynb
output/: config.json  metrics_history.json  uncertainty_calibration.json
resultados/: informe-resultados-campana-fno-vs-unet-vs-attn.md
scripts/: aggregate_campaign.py  aggregate_experiments.py  import_existing_run.py  install-git-hooks.sh  plot_campaign_comparison.py  promote-to-main.sh  run_campaign.py  run_experiment.py  train.py
scripts/etl/: etl_mysql.py  make_split.py  normalize_train_test.py  (+1 more)
specs/: backlog.md  spec-000-migracion-y-correcciones-modelo-itm.md  spec-001-entorno-trabajo-servidor.md  spec-001-framework-experimentacion-arquitecturas.md  spec-002-variante-unet-film-temporal.md  spec-003-variante-atencion-espacial-axial.md  spec-004-orquestacion-campanas-experimentos.md  spec-005-entorno-trabajo-servidor.md  spec-006-informe-divulgacion-resultados.md
sql/: ddl_mysql.sql  ddl_sqlserver.sql
(+132 files in other folders)
