[project]
name = "modelo-itm"
version = "0.1.0"
description = "Modelo FNO para prediccion espacio-temporal de SF y VD en almacenamiento geologico de CO2"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
