[project]
name = "fno-co2"
version = "0.1.0"
description = "Modelo FNO para prediccion espacio-temporal de SF y VD en almacenamiento geologico de CO2"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "matplotlib",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
db = [
    "mysql-connector-python",
    "pyodbc",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
